fix spacing for mobile

--- a/wordle/src/index.css
+++ b/wordle/src/index.css
@@ -32,6 +32,7 @@ html, body {
 
 .footer {
   position: fixed;
+  margin-top: 50px;
   bottom: 0;
   width: 100%;
   height: 50px;
